stock picking do not cros my close signal

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 194,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 195,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 196,
    "id": "1fe5694c",
    "metadata": {
     "tags": []
@@ -110,7 +110,6 @@
     "        \n",
     "        if abs(high-low)==0:\n",
     "            self.volume_pot\n",
-    "            \n",
     "        else:\n",
     "            self.volume_pot = ((abs(close-low)/abs(high-low))*volume)*0.05\n",
     "        if self.volume_pot == 0 :\n",
@@ -131,9 +130,21 @@
     "            if nom_of_sig == 4:\n",
     "                if (price > self.avg_price*2) & (price < smaprice):\n",
     "                    return True\n",
-    "            \n",
     "        else:\n",
     "            return False\n",
+    "      \n",
+    "    def stoptrade(self,curentdate,lastdate):\n",
+    "        \n",
+    "        if self.market_value>0:\n",
+    "            \n",
+    "        # check is it time to close position\n",
+    "            if (curentdate-datefromlist)>datetime.timedelta(160):\n",
+    "                return True\n",
+    "        \n",
+    "            if lastdate==curentdate: # if we reached last row\n",
+    "                return True\n",
+    "        \n",
+    "        \n",
     "        "
    ]
   },
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 197,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 198,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -185,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 213,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -275,9 +286,7 @@
     "    wdf['volsignal']=wdf['VolRise']>VolRise            # volume signal column\n",
     "    wdf['GreenCandleSig'] = wdf['Close']>wdf['Open']   # green candle\n",
     "    wdf['HighGrowPrevClose'] = (wdf[\"High\"]/wdf['PrevClose']-1)> high_prevClose # high is bigger than previous low\n",
-    "\n",
     "    wdf['TradeAfter']=wdf.index\n",
-    "\n",
     "    wdf['TradeAfterDaysSig'] = wdf['TradeAfter'] > datefromlist + datetime.timedelta(days=TradeAfterDays)\n",
     "    wdf['OpenPrice']=0\n",
     "    wdf['openPosStatus']=False\n",
@@ -307,7 +316,7 @@
     "        wdf.at[index,'VolumePoten']= mystock.volume_pot    \n",
     "        \n",
     "        # looking for opening signal \n",
-    "        if (PriceOpen ==0) & (lastrow[0]!=index): # if we haven't opened position and it's not last row\n",
+    "        if (mystock.market_value ==0) & ((index-datefromlist)<datetime.timedelta(150)): #  if we haven't opened position and we have 150 days \n",
     "            \n",
     "            if row['volsignal'] & row['TradeAfterDaysSig'] & row['GreenCandleSig'] & row['HighGrowPrevClose']:  # if Volume > than AvgVolume and green candle and high more then \n",
     "                if row[\"Close\"]>price_filter: # if price for opening is bigger than limit - please skip it\n",
@@ -321,12 +330,11 @@
     "                # volume size block\n",
     "                \n",
     "        # the next day after signal appear we check condition in order to open position\n",
-    "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False):\n",
+    "        # if all conditions suit - we continue to collect positions\n",
+    "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False) & ((index-datefromlist)<datetime.timedelta(150)) :\n",
     "            #\n",
-    "            \n",
     "            # calc how many money we need to collect\n",
     "            # how much capital we need\n",
-    "            \n",
     "            need_cap = positionValue - mystock.market_value \n",
     "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
     "            \n",
@@ -352,28 +360,11 @@
     "        if mystock.isclosesignal(close_signal, row['Close'], index, row['SMA5']) == True:\n",
     "            wdf.at[index,'Profit']=1000000\n",
     "            \n",
+    "        if mystock.stoptrade(index,lastrow[0])==True:\n",
+    "            \n",
+    "            wdf.at[index,'Profit']=-1000000\n",
     "        \n",
-    "#         if (PriceOpen >0) & (status==0):\n",
-    "#             wdf.at[index,'OpenPrice']= PriceOpen\n",
-    "#             wdf.at[index,'StopPrice']= StopPrice\n",
-    "#             wdf.at[index,'TargetPrice']= TPPrice\n",
-    "\n",
-    "\n",
-    "#             if row['High']>TPPrice:\n",
-    "#                 wdf.at[index,'Profit']= RiskPertrade*ExitAfter\n",
-    "#                 PriceOpen =0\n",
-    "#                 TPPrice=0\n",
-    "#                 StopPrice=0\n",
-    "#                 openPosStatus=False\n",
-    "                \n",
-    "\n",
-    "#             if row['Low']<StopPrice:\n",
-    "#                 wdf.at[index,'Profit']= RiskPertrade*StopLoss\n",
-    "#                 PriceOpen =0\n",
-    "#                 TPPrice=0\n",
-    "#                 StopPrice=0\n",
-    "#                 openPosStatus=False\n",
-    "\n",
+    "#         \n",
     "\n",
     "        status = 0    \n",
     "\n",
@@ -426,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 200,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -436,7 +427,7 @@
        "0"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 214,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -474,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 202,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -484,7 +475,7 @@
        "0"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 203,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 204,
    "id": "f627b623",
    "metadata": {},
    "outputs": [
@@ -523,7 +514,7 @@
        "'LPTX'"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 205,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
    "outputs": [
@@ -544,7 +535,7 @@
        "0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 206,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
@@ -565,28 +556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 207,
    "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pandas._libs.tslibs.timestamps.Timestamp"
+       "Timestamp('2022-02-11 00:00:00')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(datefromlist)"
+    "datefromlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 208,
    "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
    "metadata": {},
    "outputs": [
@@ -596,7 +587,7 @@
        "True"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 209,
    "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
    "metadata": {},
    "outputs": [
@@ -617,7 +608,7 @@
        "Timestamp('2022-08-09 00:00:00')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +619,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "id": "94f8a09c-dcf5-43fb-bf7b-38539222ebfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2022-08-09 00:00:00')"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lastrow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "53200efa-f868-4686-87f4-3f4acfafd8a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "if index==lastrow[0]: print('ok')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "76d1ff17-f874-4998-8fea-3cda1a2f1f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(index-datefromlist)<datetime.timedelta(150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a4c576d-3fab-4dee-92ed-36f2564b353f",
    "metadata": {},
    "outputs": [],
    "source": []
