here I make pause to think about algoritm

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 238,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 239,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 240,
    "id": "1fe5694c",
    "metadata": {
     "tags": []
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 241,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 242,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 259,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -342,11 +342,14 @@
     "                if (mid_price * wdf.at[index,'VolumePoten']) >= need_cap: # if potensial suit our demand\n",
     "                    size = need_cap/mid_price\n",
     "                    mystock.add(size, mid_price, index)\n",
+    "                    wdf.at[index,'Profit']= (size*mid_price)*-1\n",
+    "                    \n",
     "                    \n",
     "                else: \n",
     "                    \n",
     "                    amount = wdf.at[index,'VolumePoten']\n",
     "                    mystock.add(amount, mid_price, index)\n",
+    "                    wdf.at[index,'Profit']= (amount*mid_price)*-1\n",
     "            \n",
     "            # record MarketValue\n",
     "            wdf.at[index,'MarketValue']= mystock.market_value\n",
@@ -357,9 +360,18 @@
     "            openPosStatus == False\n",
     "            \n",
     "    #     # working with first opened position\n",
-    "        if mystock.isclosesignal(close_signal, row['Close'], index, row['SMA5']) == True:\n",
-    "            wdf.at[index,'Profit']=1000000\n",
+    "        if (mystock.isclosesignal(close_signal, row['Close'], index, row['SMA5']) == True):\n",
+    "            # ready to close position\n",
+    "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
     "            \n",
+    "            if wdf.at[index,'VolumePoten'] > mystock.qty: # close full position\n",
+    "                wdf.at[index,'Profit']= mystock.qty*mid_price\n",
+    "                mystock.clear() # clear market value, qty, avg.price\n",
+    "            else:\n",
+    "                wdf.at[index,'Profit']= wdf.at[index,'VolumePoten'] * mid_price # take all avaible stocks\n",
+    "                mystock.qty=(mystock.qty-wdf.at[index,'VolumePoten']) # decrease stock count \n",
+    "        \n",
+    "        \n",
     "        if mystock.stoptrade(index,lastrow[0])==True:\n",
     "            \n",
     "            wdf.at[index,'Profit']=-1000000\n",
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 244,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -427,7 +439,7 @@
        "0"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 260,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -465,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 246,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -475,7 +487,7 @@
        "0"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 247,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -504,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 248,
    "id": "f627b623",
    "metadata": {},
    "outputs": [
@@ -514,7 +526,7 @@
        "'LPTX'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 249,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
    "outputs": [
@@ -535,7 +547,7 @@
        "0"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 250,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
@@ -556,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 251,
    "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
    "metadata": {},
    "outputs": [
@@ -566,7 +578,7 @@
        "Timestamp('2022-02-11 00:00:00')"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 252,
    "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
    "metadata": {},
    "outputs": [
@@ -587,7 +599,7 @@
        "True"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 253,
    "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
    "metadata": {},
    "outputs": [
@@ -608,7 +620,7 @@
        "Timestamp('2022-08-09 00:00:00')"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 254,
    "id": "94f8a09c-dcf5-43fb-bf7b-38539222ebfd",
    "metadata": {},
    "outputs": [
@@ -629,7 +641,7 @@
        "Timestamp('2022-08-09 00:00:00')"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 255,
    "id": "53200efa-f868-4686-87f4-3f4acfafd8a5",
    "metadata": {},
    "outputs": [
@@ -658,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 256,
    "id": "76d1ff17-f874-4998-8fea-3cda1a2f1f02",
    "metadata": {},
    "outputs": [
@@ -668,7 +680,7 @@
        "False"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
