corect error in openPos value

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "id": "1fe5694c",
    "metadata": {
     "tags": []
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 4,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 5,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 29,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
     "            \n",
     "            \n",
     "        if mystock.is_full()==True: # position is full we waiting for close signal\n",
-    "            openPosStatus == False\n",
+    "            openPosStatus = False\n",
     "            \n",
     "    #     # working with first opened position\n",
     "        if (mystock.isclosesignal(close_signal, row['Close'], index, row['SMA5']) == True):\n",
@@ -367,9 +367,11 @@
     "            if wdf.at[index,'VolumePoten'] > mystock.qty: # close full position\n",
     "                wdf.at[index,'Profit']= mystock.qty*mid_price\n",
     "                mystock.clear() # clear market value, qty, avg.price\n",
+    "                openPosStatus = False\n",
     "            else:\n",
     "                wdf.at[index,'Profit']= wdf.at[index,'VolumePoten'] * mid_price # take all avaible stocks\n",
     "                mystock.qty=(mystock.qty-wdf.at[index,'VolumePoten']) # decrease stock count \n",
+    "                openPosStatus = False\n",
     "        \n",
     "        \n",
     "        if mystock.stoptrade(index,lastrow[0])==True:\n",
@@ -378,7 +380,8 @@
     "        \n",
     "#         \n",
     "\n",
-    "        status = 0    \n",
+    "        status = 0\n",
+    "        wdf.at[index,'test']=openPosStatus\n",
     "\n",
     "        # if there is open position and its last row\n",
     "        if lastrow[0]==index:\n",
@@ -429,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -439,7 +442,7 @@
        "0"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 30,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -477,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 9,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -487,7 +490,7 @@
        "0"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 10,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -516,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 11,
    "id": "f627b623",
    "metadata": {},
    "outputs": [
@@ -526,7 +529,7 @@
        "'LPTX'"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 12,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
    "outputs": [
@@ -547,7 +550,7 @@
        "0"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 13,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
@@ -568,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 14,
    "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
    "metadata": {},
    "outputs": [
@@ -578,7 +581,7 @@
        "Timestamp('2022-02-11 00:00:00')"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 15,
    "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
    "metadata": {},
    "outputs": [
@@ -599,7 +602,7 @@
        "True"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 16,
    "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
    "metadata": {},
    "outputs": [
@@ -620,7 +623,7 @@
        "Timestamp('2022-08-09 00:00:00')"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 17,
    "id": "94f8a09c-dcf5-43fb-bf7b-38539222ebfd",
    "metadata": {},
    "outputs": [
@@ -641,7 +644,7 @@
        "Timestamp('2022-08-09 00:00:00')"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 18,
    "id": "53200efa-f868-4686-87f4-3f4acfafd8a5",
    "metadata": {},
    "outputs": [
@@ -670,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 19,
    "id": "76d1ff17-f874-4998-8fea-3cda1a2f1f02",
    "metadata": {},
    "outputs": [
@@ -680,7 +683,7 @@
        "False"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
