--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
     "\n",
     "                # YES we find signal day\n",
     "                openPosStatus = True  # there is signal \n",
-    "                wdf.at[index,'openPosStatus']= openPosStatus # record status in dataframe\n",
+    "                wdf.at[index,'openPosStatus'] = openPosStatus # record status in dataframe\n",
     "                status=1\n",
     "                \n",
     "                # volume size block\n",
@@ -359,7 +359,7 @@
     "        if mystock.is_full()==True: # position is full we waiting for close signal\n",
     "            openPosStatus = False\n",
     "            \n",
-    "    #     # working with first opened position\n",
+    "    #     # if price rise to my goal, please close position\n",
     "        if (mystock.isclosesignal(close_signal, row['Close'], index, row['SMA5']) == True):\n",
     "            # ready to close position\n",
     "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
@@ -375,8 +375,18 @@
     "        \n",
     "        \n",
     "        if mystock.stoptrade(index,lastrow[0])==True:\n",
+    "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
     "            \n",
-    "            wdf.at[index,'Profit']=-1000000\n",
+    "            if wdf.at[index,'VolumePoten'] > mystock.qty: # close full position\n",
+    "                wdf.at[index,'Profit']= mystock.qty*mid_price\n",
+    "                mystock.clear() # clear market value, qty, avg.price\n",
+    "                openPosStatus = False\n",
+    "            else:\n",
+    "                wdf.at[index,'Profit']= wdf.at[index,'VolumePoten'] * mid_price # take all avaible stocks\n",
+    "                mystock.qty=(mystock.qty-wdf.at[index,'VolumePoten']) # decrease stock count \n",
+    "                openPosStatus = False\n",
+    "            \n",
+    "            \n",
     "        \n",
     "#         \n",
     "\n",
@@ -402,9 +412,9 @@
     "    # 6.    WinRate\n",
     "    #7.     AvgHold'\n",
     "    \n",
-    "    tradecount=(wdf['Profit']!=0).sum()\n",
-    "    ProfitTrades = (wdf['Profit']>0).sum()\n",
-    "    LossTrades = (wdf['Profit']<0).sum()\n",
+    "    #tradecount=(wdf['Profit']!=0).sum()\n",
+    "    #ProfitTrades = (wdf['Profit']>0).sum()\n",
+    "    #LossTrades = (wdf['Profit']<0).sum()\n",
     "    #WinRate = round(ProfitTrades/tradecount,1)\n",
     "    #AvgHold = round((wdf['OpenPrice']!=0).sum()/tradecount,1)\n",
     "    stock_small_res=[symbol,round(wdf['Profit'].sum(),2),tradecount,ProfitTrades,LossTrades]\n",
@@ -418,10 +428,7 @@
     "    df_output = pd.concat(all_res)\n",
     "    \n",
     "    df_data =pd.concat(data_group_res)\n",
-    "    #df_data.columns['Profit']\n",
-    "   # mask1 = df_data.Profit >0\n",
-    "    #mask2 = df_data.Profit <0\n",
-    "    #df_out= df_data.loc[df_data['Profit']!=0]\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -448,12 +455,12 @@
     }
    ],
    "source": [
-    "mystock.avg_price\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -519,178 +526,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f627b623",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'LPTX'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mystock.ticker"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mystock.avg_price"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1 = '2023-01-01'\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2022-02-11 00:00:00')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datefromlist"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(index - datefromlist) > datetime.timedelta(20)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2022-08-09 00:00:00')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "94f8a09c-dcf5-43fb-bf7b-38539222ebfd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2022-08-09 00:00:00')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lastrow[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "53200efa-f868-4686-87f4-3f4acfafd8a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
-   "source": [
-    "if index==lastrow[0]: print('ok')"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "76d1ff17-f874-4998-8fea-3cda1a2f1f02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(index-datefromlist)<datetime.timedelta(150)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
