clear some code

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -733,13 +733,6 @@
     "    #wdf.at[index,'Profit']= mystock.qty * mid_price\n",
     "    \n",
     "   \n",
-    "    # 1. тікер\n",
-    "    # 2. profit\n",
-    "    # 3. tradecount\n",
-    "    # 4. ProfitTrades\n",
-    "    #  5.   LossTrades\n",
-    "    # 6.    WinRate\n",
-    "    #7.     AvgHold'\n",
     "    \n",
     "    siteDay_CurDate = str(index-datefromlist)\n",
     "    #ProfitTrades = (wdf['Profit']>0).sum()\n",
@@ -898,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
@@ -909,12 +902,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist = testticker.history(start='2021-01-01',end='2022-01-02')\n",
+    "hist = testticker.history(start='2022-01-01',end='2023-02-01')\n",
     "\n"
    ]
   },
@@ -924,25 +917,67 @@
    "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: Stock Splits, dtype: int64)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hist"
+    "testticker.splits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "94f8a09c-dcf5-43fb-bf7b-38539222ebfd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "1987-05-11    0.000536\n",
+       "1987-08-10    0.000536\n",
+       "1987-11-17    0.000714\n",
+       "1988-02-12    0.000714\n",
+       "1988-05-16    0.000714\n",
+       "                ...   \n",
+       "2021-11-05    0.220000\n",
+       "2022-02-04    0.220000\n",
+       "2022-05-06    0.230000\n",
+       "2022-08-05    0.230000\n",
+       "2022-11-04    0.230000\n",
+       "Name: Dividends, Length: 77, dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple= yf.Ticker(\"aapl\")\n",
+    "\n",
+    "# show actions (dividends, splits)\n",
+    "apple.actions\n",
+    "\n",
+    "# show dividends\n",
+    "apple.dividends\n"
+   ]
   },
   {
    "cell_type": "code",
